I finished first media queries, 3 more to go :)

--- a/hubble-one/index.html
+++ b/hubble-one/index.html
@@ -19,7 +19,7 @@
         <img src="images/logo.svg">
       </div>
       <div class="intro-text">
-        <h1>Build The Community Your Fans Will Love</h1>
+        <h1>Build The Community <br class="break">Your Fans Will Love</h1>
         <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.
         </p>
       </div>
@@ -32,13 +32,15 @@
     <form action="" method="post" name="myForm" autocomplete="on">
         <h1>Sign Up For Early Access</h1>
 
-        <div class="email-field">
-          <input type="email" name="email" class="input-field" placeholder="email@example.com" required>
-        </div>
+        <div class="centriraj">
+          <div class="email-field">
+            <input type="email" name="email" class="input-field" placeholder="email@example.com" required>
+          </div>
 
-        <div class="signup-button">
-          <input type="submit" value="Register">
-        </div>
+          <div class="signup-button">
+            <input type="submit" value="Register">
+          </div>
+      </div>
     </form> <!-- End of Form container. -->
 
     <div id="footer">
