Fixed HTML and Accessibility Issues

--- a/hubble-one/index.html
+++ b/hubble-one/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="header">
       <div class="header-logo">
-        <img src="images/logo.svg">
+        <img alt="huddle-logo" src="images/logo.svg">
       </div>
       <div class="intro-text">
         <h1>Build The Community <br class="break">Your Fans Will Love</h1>
@@ -26,15 +26,15 @@
     </div>
 
     <div class="screen-mockup">
-      <img src="images/screen-mockups.svg">
+      <img alt="huddle-main-mockup" src="images/screen-mockups.svg">
     </div>
 
-    <form action="" method="post" name="myForm" autocomplete="on">
+    <form method="post" name="myForm" autocomplete="on">
         <h1>Sign Up For Early Access</h1>
 
         <div class="centriraj">
           <div class="email-field">
-            <input type="email" name="email" class="input-field" placeholder="email@example.com" required>
+            <input type="email" name="email" aria-label="email-field" class="input-field" placeholder="email@example.com" required>
           </div>
 
           <div class="signup-button">
